--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,9 @@ h1 {
   text-align: center;
   font-size: 1.25rem;
   width: 70%;
-  background-color: rgb(233, 83, 88);
-  color: rgb(34, 33, 33);
-  border: 2px solid rgb(34, 33, 33);
+  background-color: #FAFFD8;
+  color: #54577C;
+  border: 2px solid #54577C;
   padding: 3rem 1.5rem;
   border-radius: 14px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
@@ -48,6 +48,13 @@ h1 {
 .category-filter fieldset {
   padding: 1rem;
   text-align: center;
+}
+
+.category-filter select {
+  margin-left: 2rem;
+  font-size: inherit;
+  font-family: inherit;
+  padding: 7px 10px;
 }
 
 .quotes {
@@ -65,6 +72,7 @@ h1 {
 
 .quotes p {
   width: 100%;
+  font-size: 1.3125rem;
 }
 
 .quote-card {
@@ -76,8 +84,42 @@ h1 {
   padding: 2rem;
   width: 100%;
   max-width: 100%s;
-  background-color: rgb(249, 235, 217);
+  background-color: #9AA899;
 }
+
+.random-quote .quote-card {
+  background-color: #FAFFD8;
+  width: 100%;
+  margin-bottom: 2rem;
+  background-origin: padding-box;
+}
+
+.random-quote header {
+  display: flex;
+  font-size: 1.5rem;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.random-quote header button {
+  background-color: #54577C;
+  color: #FAFFD8;
+  padding: 5px 10px;
+  border: 0;
+  font-size: 1.25rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.random-quote header button:hover {
+  background-color: #222332;
+  color:#f6f9e3;
+  box-shadow: 9px 6px 16px -4px rgba(84, 84, 84, 0.33);
+}
+
 
 .quote-card .close-quote {
   position: absolute;
@@ -88,13 +130,13 @@ h1 {
 }
 
 .quote-card .close-quote {
-  background-color: steelblue;
+  background-color: #54577C;
   transition: 0.3s;
 }
 
 .quote-card .close-quote:hover {
-  color: steelblue;
-  background-color: white;
+  color: #54577C;
+  background-color: #FAFFD8;
 }
 
 .quote-card .add-favorite {
@@ -102,32 +144,26 @@ h1 {
   margin: 2rem 0 0;
   display: flex;
   justify-content: center;
-  border: 1px solid rgb(34, 33, 33);;
+  border: 1px solid #54577C;
   padding: 0.35rem;
   align-self: flex-end;
   cursor: pointer;
+  transition: 0.3s;
 }
 
 .quote-card .add-favorite:hover {
-  background-color: rgb(34, 33, 33);
-  color:rgb(249, 235, 217);
-  box-shadow: 9px 6px 16px -4px rgba(84, 84, 84, 0.73);
+  background-color: #54577C;
+  color:#FAFFD8;
+  box-shadow: 9px 6px 16px -4px rgba(84, 84, 84, 0.33);
 }
 
 .favorite-quotes h2 {
   width: 100%;
 }
 .favorite-quotes .quote-card {
-  background-color: steelblue;
-  color: rgb(249, 235, 217);
+  background-color: #54577C;
+  color: #FAFFD8;
   border: 0;
-}
-
-.favorite-quotes .share-the-love {
-  background-color: white;
-  color: steelblue;
-  padding: 1rem;
-  margin-top: 1.2rem;
 }
 
 @media (min-width: 800px){
