--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   box-sizing: border-box;
 }
 
-html {
-  font-family: "PT Sans", sans-serif;
+body {
+  font-family: "Quicksand", sans-serif;
 }
 
 img,
@@ -40,11 +40,20 @@ h3 {
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 main {
   margin: 6rem auto 0;
   font-family: "Quicksand", sans-serif;
+  flex: 1;
+}
+
+footer {
+  text-align: center;
+  padding: 2rem 0;
 }
 
 .message {
