--- a/src/App.css
+++ b/src/App.css
@@ -110,32 +110,31 @@ footer {
 
 .message .close-message {
   position: absolute;
-  opacity: 0;
   right: 5px;
   top: 5px;
+  opacity: 0;
   padding: 0.5rem 0.75rem;
   border-radius: 10px;
   cursor: pointer;
+  font-weight: 700;
   transition: 0.3s;
 }
 
 .message .close-message:hover {
-  background-color: ad7000;
-  color: #fbfde9;
+  transform: scale(1.2);
 }
 
 .favorite-quotes {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background: #ffe7a8;
   position: relative;
+  background: #ffe7a8;
 }
 
 .favorite-quotes .quotes h3 {
   margin-bottom: 3rem;
   font-size: 1.5rem;
-  margin-bottom: 0;
 }
 
 .favorite-quotes .quote-card {
